# Jace

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Chess/: CMakeLists.txt  Chess.hpp  ChessToDo.txt
Chess/Algo/: FixedDepthEvaluator.cpp  FixedDepthEvaluator.hpp
Chess/Base/: ChessConst.cpp  ChessConst.hpp  Engine.cpp  Engine.hpp  Move.cpp  Move.hpp  MoveEvaluator.cpp  MoveEvaluator.hpp  Notation.cpp  Notation.hpp  PieceEnum.cpp  PieceEnum.hpp  PieceOps.cpp  PieceOps.hpp  Position.cpp  Position.hpp  RecursiveEvaluator.cpp  RecursiveEvaluator.hpp  Square.cpp  Square.hpp
Chess/OO/: MoveOO.cpp  MoveOO.hpp  PositionOO.cpp  PositionOO.hpp  SquareOO.cpp  SquareOO.hpp
Chess/Protocol/: Protocol.cpp  Protocol.hpp  Uci.cpp  Uci.hpp
ChessAlgos/: CMakeLists.txt  ChessAlgos.hpp
ChessAlgos/Engines/: BourdonnaisEngine.cpp  BourdonnaisEngine.hpp  BourdonnaisEvaluator.cpp  BourdonnaisEvaluator.hpp  FirepowerEvaluator.cpp  FirepowerEvaluator.hpp
ChessAlgos/Valuation/: FixedValuations.cpp  FixedValuations.hpp
Jace/: CMakeLists.txt  Jace.cpp  Jace.hpp
Shared/: BaseIncludes.hpp
StdPlus/: CMakeLists.txt  StdPlus.hpp
StdPlus/Streams/: StreamUtils.cpp  StreamUtils.hpp
StdPlus/Templates/: EnumArithmetic.cpp  EnumArithmetic.hpp  EnumBitmask.cpp  EnumBitmask.hpp
StdPlus/TimeUtils/: StopWatch.cpp  StopWatch.hpp  TimeTypes.hpp  TimeUtils.cpp  TimeUtils.hpp
